dodano formatowanie ceny przy wyświetlaniu

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -21,6 +21,10 @@ services:
     class: AppBundle\Utils\ProductHistoryManager
     arguments: ["@supply.products", "@ordered.products", "@doctrine.orm.entity_manager", "@product.history"]
 
+  app.convert.product.price:
+    class: AppBundle\Utils\ConvertProductPrice
+    arguments: ["@products"]
+
 
 
 ## ENTITIES:
